--- a/src/package.json
+++ b/src/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "nodemon index.js",
-    "start": "node ."
+    "start": "node .",
+    "dev": "nodemon ."
   },
   "author": "",
   "license": "ISC",
@@ -13,7 +14,9 @@
     "chalk": "^3.0.0",
     "discord.js": "^14.14.1",
     "dotenv": "^16.4.1",
-    "nodemon": "^3.0.3",
     "pg": "^8.11.3"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.0"
   }
 }
