--- a/src/.env.example
+++ b/src/.env.example
@@ -1,6 +1,12 @@
 BOT_TOKEN=""
 GUILD_ID=""
 CLIENT_ID=""
+OWNER_ID=""
+ADMIN_ROLE="" -- Seperate by comma if multiple roles
+INCOMING_REPORTS_ID= -- Channel ID 
+PRIORITY_CATEGORY=
+MEDIUM_CATEGORY=
+GENERAL_CATEGORY=
 DB_USER=
 DB_PASSWORD=
 DB_HOST=
