Added setup command
Added a command that can create the required categories for the reports and logic surrounding this.

--- a/src/package.json
+++ b/src/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "nodemon index.js",
     "start": "node .",
-    "dev": "nodemon ."
+    "dev": "nodemon --ignore config.json"
   },
   "author": "",
   "license": "ISC",
